<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/home_app_bar"
                style="@style/Widget.Material3.AppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/home_toolBar"
                    style="@style/Widget.Material3.Toolbar.OnSurface"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/home_menu"
                    app:title="@string/app_name" />

            </com.google.android.material.appbar.AppBarLayout>


            <TextView
                android:id="@+id/text_bal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_variable"
                android:text="@string/current_balance"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_app_bar" />

            <TextView
                android:id="@+id/text_current_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding"
                android:maxLines="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Monies.Currency"
                android:textColor="?attr/colorAccent"
                android:textSize="40sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@id/mpesa_cards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_bal_label"
                tools:text="KSH 124,456.43" />

            <include
                android:id="@+id/mpesa_cards"
                layout="@layout/home_mpesa_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small_padding"
                app:layout_constraintTop_toBottomOf="@id/text_current_bal" />

            <HorizontalScrollView
                android:id="@+id/home_layoutChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/small_padding"
                app:layout_constraintTop_toBottomOf="@id/mpesa_cards">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/home_chipGroup_period"
                    style="@style/Widget.Material3.ChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:chipSpacingHorizontal="@dimen/activity_vertical_margin"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_past_day"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/past_day"
                        android:textSize="12sp"
                        app:checkedIcon="@drawable/history" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_past_week"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/past_week"
                        android:textSize="12sp"
                        app:checkedIcon="@drawable/history" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_past_month"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/past_month"
                        android:textSize="12sp"
                        app:checkedIcon="@drawable/history" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <include
                android:id="@+id/mpesa_dets"
                layout="@layout/home_mpesa_dets" />

        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/bottom_sheet_transactions"
        layout="@layout/sheet_transactions" />
</FrameLayout>

