<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_padding"
    android:layout_marginBottom="@dimen/small_padding"
    android:layout_marginHorizontal="@dimen/smaller_padding"
    app:columnCount="2">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_volume"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_home_transaction_volume"
            app:tint="@color/transaction_vol" />

        <TextView
            android:id="@+id/transactionVolume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smaller_padding"
            android:layout_toEndOf="@id/icon_volume"
            android:text="@string/transaction_vol"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        <TextView
            android:id="@+id/text_transaction_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/transactionVolume_label"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_toEndOf="@id/icon_volume"
            android:text="--"
            android:textAppearance="@style/TextAppearance.Monies.Currency"
            android:textColor="@color/grey_text"
            android:textSize="12sp"
            tools:text="KSH12,344.00" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1">

        <ImageView
            android:id="@+id/icon_count"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_home_transaction_count"
            app:tint="@color/transaction_count" />

        <TextView
            android:id="@+id/transactionCount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smaller_padding"
            android:layout_toEndOf="@id/icon_count"
            android:text="@string/transaction_count"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        <TextView
            android:id="@+id/text_transaction_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/transactionCount_label"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_toEndOf="@id/icon_count"
            android:text="--"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.Monies.Currency"
            android:textColor="@color/grey_text"
            tools:text="123" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_columnWeight="1">

        <ImageView
            android:id="@+id/icon_trend"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_home_pos_growth" />

        <TextView
            android:id="@+id/trend_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smaller_padding"
            android:layout_toEndOf="@id/icon_trend"
            android:text="@string/growth"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        <TextView
            android:id="@+id/text_trend"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/trend_label"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_toEndOf="@id/icon_trend"
            android:maxLines="1"
            android:text="--"
            android:textAppearance="@style/TextAppearance.Monies.Currency"
            android:textColor="@color/grey_text"
            app:autoSizeTextType="uniform"
            android:textSize="12sp"
            tools:text="KSH2,345.66(12.8%)" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_columnWeight="1">

        <ImageView
            android:id="@+id/icon_top_subject"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_home_top_subject"
            app:tint="@color/top_subject" />

        <TextView
            android:id="@+id/topSubject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smaller_padding"
            android:layout_toEndOf="@id/icon_top_subject"
            android:text="@string/top_subject"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        <TextView
            android:id="@+id/text_top_subject"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/topSubject_label"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_toEndOf="@id/icon_top_subject"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="--"
            android:textAppearance="@style/TextAppearance.Monies.Currency"
            android:textColor="@color/grey_text"
            app:autoSizeTextType="uniform"
            android:textSize="12sp"
            tools:text="@tools:sample/full_names" />
    </RelativeLayout>

</androidx.gridlayout.widget.GridLayout>